name:                   rvar
version:                0.3.0.1
stability:              stable

cabal-version:          >= 1.10
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             Dominic Steinitz <dominic@steinitz.org>
license:                PublicDomain
homepage:               https://github.com/haskell-numerics/random-fu

category:               Math
synopsis:               Random Variables
description:            Random number generation based on modeling random
                        variables by an abstract type ('RVar') which can be
                        composed and manipulated monadically and sampled in
                        either monadic or \"pure\" styles.
                        .
                        The primary purpose of this library is to support
                        defining and sampling a wide variety of high quality
                        random variables.  Quality is prioritized over speed,
                        but performance is an important goal too.
                        .
                        In my testing, I have found it capable of speed
                        comparable to other Haskell libraries, but still
                        a fair bit slower than straight C implementations of
                        the same algorithms.

tested-with:            GHC == 8.10.7

extra-source-files:     changelog.md

source-repository head
  type:                 git
  location:             https://github.com/haskell-numerics/random-fu
  subdir:               rvar

Flag mtl2
    Description:        mtl-2 has State, etc., as "type" rather than "newtype"

Library
  ghc-options:          -Wall
  hs-source-dirs:       src
  default-language:     Haskell2010
  exposed-modules:      Data.RVar
  other-modules:        Data.RVar.Prim

  if flag(mtl2)
    build-depends:      mtl == 2.*
    cpp-options:        -DMTL2
  else
    build-depends:      mtl == 1.1.*

  build-depends:        base            >= 3 && <5,
                        bytestring,
                        MonadPrompt     == 1.0.*,
                        transformers    >= 0.2 && < 0.6,
                        random          >= 1.2.0