name:                   speed-tests
version:                0.0.0.2
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>

description:            Various benchmarks for the random-fu library.

flag split-random-fu

executable random-fu-bench
  type:             exitcode-stdio-1.0
  main-is:              Bench.hs
  build-depends:        base >= 4, criterion, MonadRandom, mtl,
                        stateref, mersenne-random-pure64, mwc-random >= 0.5,
                        random, vector, deepseq
  if flag(split-random-fu)
    build-depends:      random-fu, random-source
  else
    build-depends:      random-fu
 other-modules:         TestSupport


