name:                   speed-tests
version:                0.0.0.2
stability:              experimental

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>

description:            Various benchmarks for the random-fu library.

flag split-random-fu

benchmark random-fu-bench
  type:                 exitcode-stdio-1.0
  main-is:              Bench.hs
  build-depends:        base >= 4, criterion, MonadRandom, mtl,
                        stateref, mersenne-random-pure64, mwc-random >= 0.15.0.1,
                        random, vector, deepseq,
                        random-fu
 other-modules:         TestSupport


